[gd_scene load_steps=3 format=3 uid="uid://b4bir4bbkfv64"]

[ext_resource type="Script" uid="uid://xeasl0h2yusl" path="res://src/actors/player/ui/player_quick_slot_ui/player_quick_slot_bar.gd" id="1_i5ji7"]
[ext_resource type="PackedScene" uid="uid://jj553xytl1y7" path="res://src/actors/player/ui/player_quick_slot_ui/quick_slot.tscn" id="2_4cbie"]

[node name="PlayerQuickSlotBar" type="Control"]
custom_minimum_size = Vector2(256, 96)
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 96.0
script = ExtResource("1_i5ji7")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="QuickSlot1" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_4cbie")]
layout_mode = 2

[node name="QuickSlot2" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_4cbie")]
layout_mode = 2
slot_key = 2

[node name="QuickSlot3" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_4cbie")]
layout_mode = 2
slot_key = 3
